added photo number in the corner

--- a/index.html
+++ b/index.html
@@ -17,32 +17,47 @@
   </head>
   <body>
     <div class="carousel">
-      <div class="image--container" id="imgs">
-        <img
-          src="https://images.unsplash.com/photo-1473496169904-658ba7c44d8a?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxfDB8MXxhbGx8fHx8fHx8fA&ixlib=rb-1.2.1&q=80&w=1080&utm_source=unsplash_source&utm_medium=referral&utm_campaign=api-credit"
-          alt="first-img"
-          class="image--animation"
-        />
-        <img
-          src="https://images.unsplash.com/photo-1496318447583-f524534e9ce1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxfDB8MXxhbGx8fHx8fHx8fA&ixlib=rb-1.2.1&q=80&w=1080&utm_source=unsplash_source&utm_medium=referral&utm_campaign=api-credit"
-          alt="second-img"
-          class="image--animation"
-        />
-        <img
-          src="https://images.unsplash.com/photo-1505394033641-40c6ad1178d7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY1ODkxNjA1Nw&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080"
-          alt="third-img"
-          class="image--animation"
-        />
-        <img
-          src="https://images.unsplash.com/reserve/m6rT4MYFQ7CT8j9m2AEC_JakeGivens%20-%20Sunset%20in%20the%20Park.JPG?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY1ODkxNjczOA&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080"
-          alt="fourth-img"
-          class="image--animation"
-        />
-        <img
-          src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxfDB8MXxhbGx8fHx8fHx8fA&ixlib=rb-1.2.1&q=80&w=1080&utm_source=unsplash_source&utm_medium=referral&utm_campaign=api-credit"
-          alt="fifth-img"
-          class="image--animation"
-        />
+      <div class="image--container">
+        <div>
+          <img
+            src="https://images.unsplash.com/photo-1473496169904-658ba7c44d8a?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxfDB8MXxhbGx8fHx8fHx8fA&ixlib=rb-1.2.1&q=80&w=1080&utm_source=unsplash_source&utm_medium=referral&utm_campaign=api-credit"
+            alt="first-img"
+            class="image--animation"
+          />
+          <span class="image--container--number"> </span>
+        </div>
+        <div>
+          <img
+            src="https://images.unsplash.com/photo-1496318447583-f524534e9ce1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxfDB8MXxhbGx8fHx8fHx8fA&ixlib=rb-1.2.1&q=80&w=1080&utm_source=unsplash_source&utm_medium=referral&utm_campaign=api-credit"
+            alt="second-img"
+            class="image--animation"
+          />
+          <span class="image--container--number"></span>
+        </div>
+        <div>
+          <img
+            src="https://images.unsplash.com/photo-1605770547890-5cac9a4dbce6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY1ODkzMTYwNw&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080"
+            alt="third-img"
+            class="image--animation"
+          />
+          <span class="image--container--number"></span>
+        </div>
+        <div>
+          <img
+            src="https://images.unsplash.com/reserve/m6rT4MYFQ7CT8j9m2AEC_JakeGivens%20-%20Sunset%20in%20the%20Park.JPG?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY1ODkxNjczOA&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080"
+            alt="fourth-img"
+            class="image--animation"
+          />
+          <span class="image--container--number"></span>
+        </div>
+        <div>
+          <img
+            src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MXwxfDB8MXxhbGx8fHx8fHx8fA&ixlib=rb-1.2.1&q=80&w=1080&utm_source=unsplash_source&utm_medium=referral&utm_campaign=api-credit"
+            alt="fifth-img"
+            class="image--animation"
+          />
+          <span class="image--container--number"></span>
+        </div>
       </div>
 
       <div class="button--container">
