--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="script.js" defer></script>
+    <script src="script2.js" defer></script>
     <title>Image Carousel</title>
   </head>
   <body>
